--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
 
         <section id="contact">
             <h2>Contact Me</h2>
-            <p>Email: your.email@example.com</p>
-            <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">Your LinkedIn Profile</a></p>
+            <p>Email: </p>
             <!-- Add more contact information or a contact form -->
         </section>
     </div>
