--- a/index.html
+++ b/index.html
@@ -171,6 +171,12 @@ void dispenseWater(int volume) {
         </pre>
     </section>
 
+    <section class="video-container">
+        <h2>Project Interaction Video</h2>
+        <p>Watch the interaction with the Autoirrigator below:</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/gkF5bci7Cm0?si=rjLVpxiCZvVkUPMG" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </section>
+
     <footer>
         <p>Contact me at: <a href="mailto:abdullahnawaz.sheikh@ucalgary.ca">abdullahnawaz.sheikh@ucalgary.ca</a></p>
     </footer>
