--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <h2>Arduino Code</h2>
         <pre>
             <code>
-#include <Keypad.h>
+#include "<Keypad.h>"
 
 // Define keypad dimensions and keys
 const byte ROWS = 4;
