--- a/autoirrigator.html
+++ b/autoirrigator.html
@@ -5,29 +5,96 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Autoirrigator Project</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: 'Helvetica Neue', Arial, sans-serif;
+            background-color: #1c1c1c;
+            color: #e0e0e0;
+            margin: 0;
+            padding: 20px;
+            line-height: 1.6;
+        }
+        header, footer {
+            text-align: center;
+            padding: 20px;
+        }
+        header {
+            border-bottom: 1px solid #555;
+        }
+        footer {
+            border-top: 1px solid #555;
+            font-size: 0.8em;
+            color: #777;
+        }
+        section {
+            background-color: #2a2a2a;
+            padding: 20px;
+            border-radius: 12px;
+            margin-bottom: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        h1, h2 {
+            color: #ffffff;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+        p, pre {
+            color: #d0d0d0;
+        }
+        a {
+            color: #4CAF50;
+            text-decoration: none;
+        }
+        a:hover {
+            color: #ffffff;
+        }
+        img {
+            max-width: 100%;
+            border-radius: 8px;
+            margin: 10px 0;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        }
+        iframe {
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            max-width: 100%;
+        }
+    </style>
 </head>
 <body>
     <header>
         <h1>Autoirrigator Project</h1>
+        <a href="index.html">Back to Portfolio</a>
     </header>
 
     <section>
-        <h2>Project Details</h2>
-        <p>The Autoirrigator is an automated irrigation system that measures soil moisture levels and waters plants accordingly...</p>
-        <h2>Arduino Code</h2>
+        <h2>Project Overview</h2>
+        <p>The Autoirrigator is an automated irrigation system that measures soil moisture levels and waters plants accordingly. It uses a keypad for user input and an RGB LED to visually indicate soil moisture levels.</p>
+    </section>
+
+    <section>
+        <h2>Project Code</h2>
         <pre><code>
-// Include your Arduino code here
+// Insert relevant project code snippet here
         </code></pre>
+    </section>
+
+    <section>
         <h2>Circuit Schematic</h2>
-        <img src="https://raw.githubusercontent.com/Abuudiii/Portfolio/main/Schematic.png" alt="Circuit Schematic">
-        <div class="video-container">
-            <h2>Project Interaction Video</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/gkF5bci7Cm0?si=rjLVpxiCZvVkUPMG" frameborder="0" allowfullscreen></iframe>
-        </div>
+        <img src="Schematic.png" alt="Circuit Schematic">
+    </section>
+
+    <section>
+        <h2>Interaction Video</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/gkF5bci7Cm0?si=rjLVpxiCZvVkUPMG" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
 
     <footer>
-        <a href="index.html">Back to Portfolio</a>
+        <p>&copy; 2024 Abdullah Nawaz Sheikh. All rights reserved.</p>
     </footer>
 </body>
 </html>
