--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Abdullah Nawaz Sheikh">
-    <meta name="description" content="Project Portfolio">
+    <meta name="description" content="A0 Hello World - Tangible & Physical HCI">
     <title>Projects by Abdullah Nawaz Sheikh</title>
     <style>
         body {
@@ -13,28 +13,66 @@
             color: #e0e0e0;
             margin: 0;
             padding: 20px;
+            line-height: 1.6;
         }
         header {
             text-align: center;
             padding: 20px;
             border-bottom: 1px solid #555;
         }
-        .project-card {
+        section {
             background-color: #2a2a2a;
             padding: 20px;
             border-radius: 12px;
             margin-bottom: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             transition: transform 0.2s;
-            text-align: center;
         }
-        .project-card:hover {
+        section:hover {
             transform: translateY(-5px);
         }
         h1, h2 {
             color: #ffffff;
             text-transform: uppercase;
             letter-spacing: 2px;
+        }
+        p, ul, pre {
+            color: #d0d0d0;
+        }
+        ul {
+            list-style-type: none;
+            padding-left: 0;
+        }
+        ul li::before {
+            content: '⚬';
+            color: #4CAF50;
+            padding-right: 10px;
+        }
+        code {
+            background-color: #333;
+            color: #4CAF50;
+            padding: 4px 8px;
+            border-radius: 4px;
+        }
+        img {
+            max-width: 100%;
+            border-radius: 8px;
+            margin: 10px 0;
+        }
+        .video-container {
+            text-align: center;
+            margin: 20px 0;
+        }
+        iframe {
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        }
+        footer {
+            text-align: center;
+            padding: 10px;
+            font-size: 0.8em;
+            color: #777;
+            border-top: 1px solid #555;
         }
         a {
             color: #4CAF50;
@@ -62,10 +100,14 @@
         const projects = [
             {
                 title: "Autoirrigator",
-                description: "The Autoirrigator is an automated irrigation system that measures soil moisture levels and waters plants accordingly.",
-                link: "autoirrigator.html" // Link to the project detail page
+                description: "The Autoirrigator is an automated irrigation system that measures soil moisture levels and waters plants accordingly. It uses a keypad for user input and an RGB LED to visually indicate soil moisture levels.",
+                link: "autoirrigator.html"
+            },
+            {
+                title: "Portobeats",
+                description: "Portobeats is a wearable glove system that allows users to assign different musical instruments to each finger tap on any surface, enabling them to create beats interactively.",
+                link: "portobeats.html"
             }
-            // Add more project objects here with their corresponding links
         ];
 
         function renderProjects() {
