--- a/portobeats.html
+++ b/portobeats.html
@@ -32,7 +32,6 @@
             border-radius: 12px;
             margin-bottom: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            text-align: center;
             max-width: 800px;
             margin-left: auto;
             margin-right: auto;
@@ -42,8 +41,17 @@
             text-transform: uppercase;
             letter-spacing: 2px;
         }
-        p, pre {
+        p {
             color: #d0d0d0;
+            text-align: center;
+        }
+        pre {
+            color: #d0d0d0;
+            text-align: left;
+            overflow-x: auto;
+            background-color: #333;
+            padding: 15px;
+            border-radius: 8px;
         }
         a {
             color: #4CAF50;
@@ -84,55 +92,69 @@
     <section>
         <h2>Project Code</h2>
         <pre><code>
-#include &lt;MIDI.h&gt;
-#include &lt;CapacitiveSensor.h&gt;
+// This code is for Arduino Due to use 8 FSRs (Force Sensitive Resistors) connected to analog pins A0-A7
+// Each FSR corresponds to a different MIDI note to create a mini beat maker.
+// You'll need the MIDI library to send MIDI signals via USB.
 
-// Define pin connections for capacitive sensors
-CapacitiveSensor cs1 = CapacitiveSensor(4, 2); // Thumb
-CapacitiveSensor cs2 = CapacitiveSensor(4, 3); // Index finger
-CapacitiveSensor cs3 = CapacitiveSensor(4, 5); // Middle finger
-CapacitiveSensor cs4 = CapacitiveSensor(4, 6); // Ring finger
-CapacitiveSensor cs5 = CapacitiveSensor(4, 7); // Pinky finger
+#include <MIDIUSB.h>
 
-MIDI_CREATE_DEFAULT_INSTANCE();
+// Define FSR pins
+const int fsrPins[8] = {A0, A1, A2, A3, A4, A5, A6, A7};
+
+// Define MIDI note numbers for each FSR
+const int midiNotes[8] = {36, 38, 42, 46, 49, 51, 53, 55};
+
+// Define MIDI channels for each FSR
+const int midiChannels[8] = {0, 1, 2, 3, 4, 5, 6, 7}; // Channels 1-8
+
+// Threshold value to determine when an FSR is pressed
+const int threshold = 100;
+
+// Stores the last state of each FSR to avoid multiple triggers
+int lastFSRState[8] = {0, 0, 0, 0, 0, 0, 0, 0};
 
 void setup() {
-    MIDI.begin(MIDI_CHANNEL_OMNI);
-    Serial.begin(9600);
+  // Initialize serial communication for debugging (optional)
+  Serial.begin(115200);
 }
 
 void loop() {
-    long thumbValue = cs1.capacitiveSensor(30);
-    long indexValue = cs2.capacitiveSensor(30);
-    long middleValue = cs3.capacitiveSensor(30);
-    long ringValue = cs4.capacitiveSensor(30);
-    long pinkyValue = cs5.capacitiveSensor(30);
+  // Iterate over each FSR
+  for (int i = 0; i < 8; i++) {
+    int fsrValue = analogRead(fsrPins[i]);
 
-    if (thumbValue > 1000) {
-        MIDI.sendNoteOn(36, 127, 1); // Kick drum
-        delay(100);
-        MIDI.sendNoteOff(36, 0, 1);
+    // Check if FSR value exceeds the threshold
+    if (fsrValue > threshold && lastFSRState[i] == 0) {
+      // FSR is pressed, send a MIDI note ON message on a specific channel
+      noteOn(midiChannels[i], midiNotes[i], 127);
+      Serial.print("FSR ");
+      Serial.print(i);
+      Serial.println(" pressed");
+      lastFSRState[i] = 1;
+    } else if (fsrValue <= threshold && lastFSRState[i] == 1) {
+      // FSR is released, send a MIDI note OFF message on a specific channel
+      noteOff(midiChannels[i], midiNotes[i], 127);
+      Serial.print("FSR ");
+      Serial.print(i);
+      Serial.println(" released");
+      lastFSRState[i] = 0;
     }
-    if (indexValue > 1000) {
-        MIDI.sendNoteOn(38, 127, 1); // Snare drum
-        delay(100);
-        MIDI.sendNoteOff(38, 0, 1);
-    }
-    if (middleValue > 1000) {
-        MIDI.sendNoteOn(42, 127, 1); // Hi-hat
-        delay(100);
-        MIDI.sendNoteOff(42, 0, 1);
-    }
-    if (ringValue > 1000) {
-        MIDI.sendNoteOn(46, 127, 1); // Open hi-hat
-        delay(100);
-        MIDI.sendNoteOff(46, 0, 1);
-    }
-    if (pinkyValue > 1000) {
-        MIDI.sendNoteOn(49, 127, 1); // Crash cymbal
-        delay(100);
-        MIDI.sendNoteOff(49, 0, 1);
-    }
+  }
+  delay(10); // Add a small delay to debounce
+}
+
+// Send a MIDI note-on message
+void noteOn(byte channel, byte pitch, byte velocity) {
+  midiEventPacket_t noteOn = {0x09, 0x90 | channel, pitch, velocity};
+  MidiUSB.sendMIDI(noteOn);
+  MidiUSB.flush();
+}
+
+// Send a MIDI note-off message
+void noteOff(byte channel, byte pitch, byte velocity) {
+  midiEventPacket_t noteOff = {0x08, 0x80 | channel, pitch, velocity};
+  MidiUSB.sendMIDI(noteOff);
+  MidiUSB.flush();
 }
         </code></pre>
     </section>
