--- a/portobeats.html
+++ b/portobeats.html
@@ -71,6 +71,16 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
             max-width: 100%;
         }
+        .concept-images {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+        .concept-images img {
+            max-width: 30%;
+            height: auto;
+        }
     </style>
 </head>
 <body>
@@ -82,6 +92,15 @@
     <section>
         <h2>Project Overview</h2>
         <p>Portobeats is a wearable glove system that allows users to assign different musical instruments to each finger tap on any surface, enabling them to create beats interactively. This project combines wearable technology and music production to create a tangible interaction experience that encourages creativity and exploration.</p>
+    </section>
+
+    <section>
+        <h2>Concept</h2>
+        <div class="concept-images">
+            <img src="concept1.png" alt="Concept Image 1">
+            <img src="concept2.png" alt="Concept Image 2">
+            <img src="concept3.png" alt="Concept Image 3">
+        </div>
     </section>
 
     <section>
